[project]
name = "name"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Paul Jonas Dohle", email = "paul.jonas@dohle-net.de" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
]
dependencies = []

[project.optional-dependencies]
lint = [
    "black==24.10.0",
]

[project.urls]
Repository = "https://github.com/RedLion8399/{Repo_name}"
Issues = "https://github.com/RedLion8399/{Repo_name}/issues"
Documentation = "https://github.com/RedLion8399/{Repo_name}/wiki"
